# pokechu

./: .gitignore  LICENSE  README.md
Pokechu_Material3/: build.gradle  settings.gradle
Pokechu_Material3/app/: build.gradle
assets/: logo.xcf
data_viewer/: .gitignore  CMakeLists.txt  resources.qrc
data_viewer/CMake/: Common.cmake
data_viewer/qml/: QmlTreeView.qml  QmlTreeViewItem.qml  main.qml
data_viewer/resources/: pokemon_evolution_trees.json
data_viewer/src/: main.cpp
db/: .project  db.sqlite  db_clear.sql  db_init.sql  db_new.sqlite  db_sample_data.sql
db/.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  .project-metadata.json.bak  credentials-config.json  data-sources.json  project-metadata.json  project-settings.json
db/Diagrams/: Test.erd
db/Scripts/: db.sql  db_new.sql
db/tests/: db.sql  db_new.sql
parser/: .gitignore  conditions_parser.py  data.py  data_enums.py  data_parser.py  enums.py  evolutions_parser.py  exporter.py  exporter_sqlite.py  html_table_parser.py  list_parser.py  main.py  parse.py  parser_conditions.py  parser_data.py  parser_evolutions.py  parser_list.py  parser_misc.py  pokedex.py  pokepedia_parser.py  sqlite_writer.py  tree_test.py  utils.py
parser/data/: Liste des Pokémon dans l'ordre du Pokédex National — Poképédia.html  Liste des Pokémon par famille d'évolution — Poképédia.html  Type — Poképédia.html  data_enums.py  list.html  list.txt  list_tidied.txt  pokedex.py  poussacha.html
parser/db/: db_clear.sql  db_init.sql
parser/export/: exporter.py  exporter_sqlite.py
parser/output/: EvolutionItem.kt  PokemonType.kt  count_by_pokedex.txt  db.sqlite  pokemon_evolution_trees.json  pokemon_evolution_trees_en.json  pokemon_evolutions.txt  pokemon_list.json  pokemon_list_old.json  pokemon_not_found.txt  pokemon_not_found_paldea_only.txt  pokemons-en.xml  pokemons-fr.xml  pokemons.xml  regions-en.xml  regions.xml
parser/parsing/: parser_conditions.py  parser_data.py  parser_evolutions.py  parser_list.py
parser/utils/: utils.py
parser_output/: EvolutionCondition.kt  Region.kt  db.sqlite  pokemon_evolution_trees.json
parser_output/values/: evolution_items.xml  games.xml  pokemon_types.xml  pokemons.xml
parser_output/values-en/: games.xml  pokemon_types.xml  regions.xml
parser_output/values-fr/: pokemon_types.xml
pokechu/: build.gradle  gradle.properties  settings.gradle  versions.gradle
pokechu_android/: settings.gradle
qml_app/: CMakeLists.txt  main.cpp  qml_qrc.sh  resources.qrc
qml_app/qml/: Button.qml  Filter.qml  LineEdit.qml  Main.qml  PreviewDelegate.qml  SuggestionBox.qml  Suggestions.qml  SuggestionsPreview.qml  main.qml
(+297 files in other folders)
